# carbon

./: CONTRIBUTING.md  README.md  compose.yml
.github/workflows/: python-app.yml
client/: README.md  pyproject.toml
client/edf_carbon_client/: __init__.py
client/test/: client.py  subscribe.py
core/: README.md  pyproject.toml
core/edf_carbon_core/concept/: category.py
server/: README.md  carbon.dist.yml  constant.dist.yml  pyproject.toml
server/docker/: Dockerfile  docker-entrypoint.sh
server/docker/tpl/: carbon.dist.yml
server/edf_carbon_server/: main.py  pubsub.py  storage.py
server/edf_carbon_server/api/: __init__.py  case.py
web/: README.md  angular.json  package.json
web/src/: index.html  mytheme.ts  styles.scss
web/src/app/: app.config.ts  app.routes.ts
web/src/app/components/auth/: auth.component.html  auth.component.ts
web/src/app/components/case/: case.component.html  case.component.scss  case.component.ts
web/src/app/components/dashboard/: dashboard.component.html  dashboard.component.ts
web/src/app/modals/case-event-details-modal/: case-event-details-modal.component.html  case-event-details-modal.component.ts
web/src/app/modals/create-case-modal/: case-create-modal.component.html  case-create-modal.component.ts
web/src/app/modals/create-event-modal/: event-create-modal.component.html  event-create-modal.component.ts
web/src/app/services/: api.service.ts  idle-detector.service.ts  interceptor.service.ts  utils.service.ts
web/src/app/types/: API.ts  case.ts  event.ts
