[project]
name = "edf-carbon-server"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["edf", "carbon", "server"]
description = "EDF Carbon Server"
requires-python = ">=3.12"
dynamic = ["version"]
authors = [
  { name="CERT-EDF", email="cert@edf.fr" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: Security",
]
dependencies = [
    "edf-carbon-core~=1.0",
    "aiosqlite~=0.20",
]


[project.urls]
"Homepage" = "https://github.com/cert-edf/carbon"
"Repository" = "https://github.com/cert-edf/carbon"
"Bug Tracker" = "https://github.com/cert-edf/carbon/issues"


[project.scripts]
"carbon-server" = "edf_carbon_server.main:app"
"carbon-synchronizer" = "edf_carbon_server.synchronizer:app"


[build-system]
requires = ["setuptools>=78", "setuptools_scm>=8.2", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["edf_carbon_server", "edf_carbon_server.*"]


[tool.setuptools_scm]
root = ".."
version_file = "edf_carbon_server/__version__.py"


[tool.black]
line-length = 79
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 79
